--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,42 @@ abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
 table{border-collapse:collapse;border-spacing:0}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
 input,select{vertical-align:middle}
+
+
+.firstElement {
+    width: 100%;
+}
+
+/* .tracks {
+} */
+
+.tracks {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.tracktext {
+    padding: 20px 0;
+}
+
+.track {
+    width: 33%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border:1px solid blue;
+}
+
+.trackimage {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+}
+
+.trackimage {
+    width: 80%;
+    height: 80%;
+}
