--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ input,select{vertical-align:middle}
 
 /* Nav */
 nav {
-    background-color: black;
+    background-color: rgb(30, 30, 30);
     color: white;
     height: 60px;
     display: flex;
@@ -33,7 +33,7 @@ nav p {
 
 /* Body */
 body {
-    /* background-color: black; */
+    background-color: black;
 }
 
 
@@ -64,7 +64,6 @@ body {
 
 .left-content {
     width: 60%;
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,47 +72,64 @@ body {
 
 .right-content {
     width: 40%;
-    border: 1px solid red;
 }
 
 /* About track */
 .tracks {
     display: flex;
     justify-content: space-evenly;
-    /* border: 1px solid red; */
     height: 150%;
+    padding-bottom: 40px;
+    padding-top: 20px;
 }
 
-.tracktext {
-    padding: 20px 0;
+.track .tracktext {
+    height: 20%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .track {
     width: 30%;
-    height: 150%;
+    height: 420px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* border:1px solid blue; */
-    background-color: yellow;
-    border-radius: 50px;
+    background-color: rgb(30, 30, 30);
+    border-radius: 30px;
 }
 
 .trackimage {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
 }
 
-.trackimage {
-    width: 80%;
-    height: 80%;
+.trackimage2 {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.link {
+    display: flex;
+    justify-content: center;
 }
 
 span,h1,h2 {
-    /* color: white; */
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.tracklink {
+    color: rgb(60, 198, 60);
+    text-decoration: none;
+}
+
+.name {
+    color: white;
 }
 
 /* レコメンデーションで対象に取るやつを変えられるボタンがあると面白いかもしれない */
@@ -122,8 +138,4 @@ span,h1,h2 {
 /* track image をwrapperに入れてどうにかしないとtrack自体の大きさをいじれないかもしれない */
 /* image自体にURLを付与したい */
 
-/* place holderにあるやつを一段下に持ってきてみる */
-/* exampleでドレイクのURLを置いときたいかも */
-/* fillwithDrakeでright-contentに画像が表示されない */
-/* 多分最初に置いてるドレイクのURLが違うっぽい、それに応じてartistIDらへんも変えなきゃかも */
 /* リフレッシュボタンが必要 */
