--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ input,select{vertical-align:middle}
 nav {
     background-color: rgb(30, 30, 30);
     color: white;
-    height: 60px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +29,7 @@ nav {
 nav p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    font-weight: 600;
 }
 
 /* Body */
@@ -43,16 +44,26 @@ body {
 }
 
 .refreshButton {
-    margin-top: 20px;
+    margin-top: 80px;
+    padding: 10px 20px;
+    font-size: 15px;
+}
+
+.refreshButton:hover {
+    background-color: rgb(0, 144, 0);
 }
 
 .header {
     width: 100%;
-    height: 200px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.header h1 {
+    font-size: 25px;
 }
 
 /* Second Element */
@@ -70,6 +81,37 @@ body {
     flex-direction: column;
 }
 
+.left-content #submitID {
+    padding: 60px 0;
+}
+
+.left-content form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.left-content #artistID {
+    width: 40%;
+    height: 30px;
+    border-radius: 100vh;
+    padding-left: 20px;
+    font-size: 14px;
+}
+
+.left-content .submit-button {
+    padding: 10px 20px;
+    font-size: 15px;
+}
+
+.left-content h2 {
+    font-size: 25px;
+}
+
+.left-content .submit-button:hover {
+    background-color: rgb(0, 144, 0);
+}
+
 .right-content {
     width: 40%;
 }
@@ -79,8 +121,10 @@ body {
     display: flex;
     justify-content: space-evenly;
     height: 150%;
+}
+
+.top-tracks {
     padding-bottom: 40px;
-    padding-top: 20px;
 }
 
 .track .tracktext {
@@ -99,7 +143,13 @@ body {
     align-items: center;
     background-color: rgb(30, 30, 30);
     border-radius: 30px;
+    transition:transform 0.3s;
 }
+     
+.track:hover {
+    transform:scale(1.05);
+}
+
 
 .trackimage {
     width: 100%;
@@ -123,12 +173,25 @@ span,h1,h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.down-tracks {
+    padding-bottom: 40px;
+    padding-top: 40px;
+}
+
 .tracklink {
     color: rgb(60, 198, 60);
     text-decoration: none;
 }
 
 .name {
+    color: white;
+    font-size: 18px;
+}
+
+.buttons {
+    border-radius: 100vh;
+    background-color: green;
+    border: none;
     color: white;
 }
 
